refactor: healthy api: swagger + handler
